change single to double quotes for JSON Parse
Signed-off-by: Tom Van Oppens <4301313+tomvanoppens@users.noreply.github.com>

--- a/user-defined-policies/ip-allowlist/ip-limit.cfg
+++ b/user-defined-policies/ip-allowlist/ip-limit.cfg
@@ -33,7 +33,7 @@ assembly-function "ip-limit"
   parameter
     name "ranges"
     label "ip range"
-    description "array of IP range arrays i.e. [['1.1.1.1', '111.111.111.11'],['172.30.0.0', '174.30.254.27']]"
+    description 'array of IP range arrays i.e. [["1.1.1.1", "111.111.111.11"],["172.30.0.0", "174.30.254.27"]]'
     value-type string
     required 
   exit
