Introducs dissalow policy and adhere to documented naming convention
Signed-off-by: Tom Van Oppens <4301313+tomvanoppens@users.noreply.github.com>

--- a/user-defined-policies/ip-allowlist/ip-limit.cfg
+++ b/user-defined-policies/ip-allowlist/ip-limit.cfg
@@ -1,8 +1,10 @@
 %if% available "assembly-gatewayscript"
 
-assembly-gatewayscript "ip-limit"
+assembly-gatewayscript "ip-limit_1.0.0"
+ reset 
+ 
  title "IP Limit"
- gatewayscript-location "local://js/ip-limit.js"
+ gatewayscript-location "local://ip-limit_1.0.0/ip-limit_1.0.0.js"
 exit
 
 %endif%
@@ -10,8 +12,10 @@ exit
 
 %if% available "api-rule"
 
-api-rule "ip-limit"
- action ip-limit
+api-rule "ip-limit_1.0.0"
+ reset 
+
+ action ip-limit_1.0.0
 exit
 
 %endif%
@@ -19,16 +23,21 @@ exit
 
 %if% available "assembly"
 
-assembly "ip-limit"
- rule ip-limit
+assembly "ip-limit_1.0.0"
+ reset
+
+ rule ip-limit_1.0.0
 exit
 
 %endif%
 
 %if% available "assembly-function"
 
-assembly-function "ip-limit"
-  title "ip-limit"
+assembly-function "ip-limit_1.0.0"
+  reset
+  no parameter
+
+  title "ip-limit_1.0.0"
   scope all
   parameter
     name "ranges"
@@ -37,6 +46,15 @@ assembly-function "ip-limit"
     value-type string
     required 
   exit
+  parameter
+    name "mode"
+    label "check mode"
+    description "Use Allow or Deny - Default value is Allow"
+    value "Allow"
+    value-type string
+    required 
+  exit
+  assembly ip-limit_1.0.0
 exit
 
 %endif%
@@ -45,7 +63,7 @@ exit
 %if% available "apic-gw-service"
 
 apic-gw-service
- user-defined-policies ip-limit
+ user-defined-policies ip-limit_1.0.0
 exit
 
 %endif%
